--- a/en/惜/惜.15601.wikitext
+++ b/en/惜/惜.15601.wikitext
@@ -18,11 +18,14 @@
 
 Note that 昔 has meaning of “past, ending”, hence connotations of “feelings for the past, feeling about an ending – regret, rue”.
 
-===Pronunciation 1===
+===Etymology===
+{{rfe|zh}}
+
+===Pronunciation===
 {{zh-pron
 |m=惜
 |c=sik1,sek3
-|c_note=sik1 - literary; sek3 - vernacular
+|c_note=sik1 - literary (all senses except “to kiss”); sek3 - vernacular (“to kiss; to cherish”)
 |h=pfs=siak/sit;gd=xiag5/xid5
 |h_note=Sixian: siak - vernacular; sit - literary
 Meixian: xiag5 - vernacular; xid5 - literary
@@ -37,35 +40,27 @@ Meixian: xiag5 - vernacular; xid5 - literary
 |cat=n,v
 }}
 
-====Definitions====
+===Definitions===
 {{zh-hanzi}}
 
 # [[pity]]; [[regret]]
 # to [[cherish]]; to [[value]] [[greatly]]
+# {{lb|zh|Cantonese}} to [[cherish]]; to [[adore]]
+#* {{zh-x|@'''錫''' 嗮 你　你 乖乖 地 我 實行 @'''錫''' 嗮 你||C|ref={{w2|zh|許冠傑}} ({{w|Samuel Hui}}), {{lang|zh|錫嗮你}}}}
 # to [[love]] [[dearly]]
 # to [[grieve]]
 # to [[rue]]; to [[begrudge]]
-
-====Compounds====
-{{zh-der|惜玉憐香|在所不惜|惜孤念寡|不惜|愛日惜力|惜身|惜老憐貧|惜恐|惜香憐玉|愛惜|惺惺相惜|惜別會|惜字|惜售|惜力|惜別|惜分陰|惋惜|悵惜|惜指失掌|惜陰|吝惜|惜福|可惜|愛惜羽毛|惜玉|寶惜|惜墨法|惜墨如金|憐孤惜寡|疼惜|拍惜|憐惜|痛惜|棄之可惜|矜惜|憐香惜玉|憐貧惜老|珍惜|死不足惜|歎惜|自惜羽毛|體惜|閔惜|顧惜|軫惜}}
-
-====References====
-* {{thcwd|7255}}
-
-===Pronunciation 2===
-{{zh-pron
-|c=sek3
-|c_note=sik1 - literary; sek3 - vernacular
-}}
-
-====Definitions====
 # {{lb|zh|Cantonese}} to [[kiss]]
 #* {{zh-x|門牙 和 紅唇 做 美夢，每次 你 輕{hing1}輕{hing1} 的 親 我（@'''錫''' 啖 先 哪）||C|ref={{w2|zh|林姍姍}}, {{lang|zh|連鎖反應}}}}
-# {{lb|zh|Cantonese}} to [[cherish]]; to [[adore]]
-#* {{zh-x|@'''錫''' 嗮 你　你 乖乖 地 我 實行 @'''錫''' 嗮 你||C|ref={{w2|zh|許冠傑}} ({{w|Samuel Hui}}), {{lang|zh|錫嗮你}}}}
 
 ====Synonyms====
 *{{sense|kiss}} {{zh-l|親}}, {{zh-l|吻}}, {{zh-l|親嘴}}, {{zh-l|接吻}}; {{q|Cantonese}} {{zh-l|嘴}}, {{zh-l|打茄輪}}; {{q|Min Nan}} {{zh-l|*相唚}}, {{zh-l|*唚喙}}
+
+===Compounds===
+{{zh-der|惜玉憐香|在所不惜|惜孤念寡|不惜|愛日惜力|惜身|惜老憐貧|惜恐|惜香憐玉|愛惜|惺惺相惜|惜別會|惜字|惜售|惜力|惜別|惜分陰|惋惜|悵惜|惜指失掌|惜陰|吝惜|惜福|可惜|愛惜羽毛|惜玉|寶惜|惜墨法|惜墨如金|憐孤惜寡|疼惜|拍惜|憐惜|痛惜|棄之可惜|矜惜|憐香惜玉|憐貧惜老|珍惜|死不足惜|歎惜|自惜羽毛|體惜|閔惜|顧惜|軫惜}}
+
+===References===
+* {{thcwd|7255}}
 
 ----
 
