--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -396,7 +396,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 #*: Google owner Alphabet’s subsidiary Nest is closing a smart-home company it bought less than two years ago, leaving customers’ devices useless as of May. {{...}} The company declined to share how many customers would be left with '''bricked''' devices as a result of the shutdown.
 
 ====Antonyms====
-* {{sense|technology, slang: revert a device to nonoperational state}} {{l|en|unbrick}}
+* {{sense|technology, slang: revert a device to the operational state}} {{l|en|unbrick}}
 
 ====Derived terms====
 * {{l|en|bricker}}
