--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -31,14 +31,20 @@ From {{och-l|移|to change; to alter}} + k-extension ({{zh-ref|Schuessler, 2007}
 ====Pronunciation====
 {{zh-pron
 |m=yì
+|m-s=
 |c=jik6
+|c-t=yet5
+|g=
 |h=pfs=yi̍t
+|j=
+|mb=
 |md=ĭk
 |mn=xm,zz,tw:e̍k/qz:ia̍k/ia̍h
 |mn_note=e̍k/ia̍k - literary; ia̍h - colloquial (only as a surname or when referring to {{zh-l|*易經}})
 |mn-t=êg8/iah8
 |mn-t_note=êg8 - literary; iah8 - colloquial (only as a surname or when referring to {{zh-l|*易經}})
 |w=5hhiq
+|x=
 |mc=2
 |oc=2,2
 |cat=v,pn
@@ -62,12 +68,18 @@ From {{inh|zh|sit-pro|*lwa(ː)j||easy}}. Cognate with {{cog|my|လွယ်||eas
 ====Pronunciation====
 {{zh-pron
 |m=yì
+|m-s=
 |c=ji6
+|c-t=yi5
+|g=
 |h=pfs=yi
+|j=
+|mb=
 |md=ê
 |mn=ī
 |mn-t=i6
 |w=3hhi
+|x=
 |mc=1
 |oc=1,1
 |cat=a,adv
@@ -84,6 +96,7 @@ From {{inh|zh|sit-pro|*lwa(ː)j||easy}}. Cognate with {{cog|my|လွယ်||eas
 
 =====Synonyms=====
 {{zh-dial|容易}}
+
 ====Compounds====
 {{zh-der|反掌之易|和易|器小易盈|坦易|大不易|夷易|始終不易|容易|小器易盈|居大不易|居易|嶢嶢易缺|平心易氣|平易|平易謙沖|平易近人|平易近民|彩雲易散|得來不易|情詞易工|慢易|易刑處分|易加卡|易北河|易卜生|易可|易堂九子|易如反掌|易如拾芥|易如翻掌|易守難攻|易帶|易感性|易手|易拉罐|易於反掌|易易|易熔合金|易燃物|易知由單|易通釋|易開罐|未易才|樂易|深耕易耨|淺易|淺而易見|淺顯易懂|盛筵易散|眾擎易舉|知易行難|知難行易|簡易|簡易師範|脫易|賢賢易色|輕易|輕而易舉|辟易|道近易從|避難就易|鄙易|量小易盈|陰陽易位|險易|難易|難易適中|顯而易見|馮唐易老|驕易|三不易|來之不易|易窯|易與}}
 
