--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -202,6 +202,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 *: Nynorsk: {{t|nn|mage|m}}, {{t|nn|magesekk|m}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|estomac|m}}
+* Ojibwe: {{q|my stomach}} {{t|oj|nimisad}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|желудъкъ|m}}
 * Old English: {{t|ang|maga|m}}, {{t|ang|wamb|f}}, {{t|ang|būc|m}}
@@ -352,6 +353,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Norman: {{t|nrf|ventre|m}} {{qualifier|Jersey, Guernsey}}, {{t|nrf|vãtr|m}} {{qualifier|Sa;rk}}, {{t|nrf|dare}} {{qualifier|continental Normandy}}
 * Northern Ohlone: {{t|cst|hút̄u}}
 * Norwegian: {{t+|no|mage|m}}, {{t+|no|buk|m}}
+* Ojibwe: {{q|my stomach}} {{t|oj|nimisad}}
 * Old Turkic: {{t|otk|𐰴𐰺𐰣|ts=qarïn}}
 * Pashto: {{t+|ps|خېټه|f|tr=xéṭa}}
 * Persian: {{t+|fa|شکم|tr=šekam|sc=fa-Arab}}
