--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -341,6 +341,8 @@ From modern {{bor|de|fr|blond}}, from {{der|de|frk|*blund}}, from {{der|de|gem-p
 ----
 
 ==Plautdietsch==
+===Etymology===
+From {{bor|pdt|fr|blond}}
 
 ===Adjective===
 {{head|pdt|adjective}}
