--- a/en/坢/坢.13029.wikitext
+++ b/en/坢/坢.13029.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=49150|canj=GFQ|ids=⿰土半}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0226.120|dkj=04967|dj=0461.260|hdz=10435.010|uh=5762|ud=22370|bh=CBFE|bd=52222}}
 
 ----
@@ -14,6 +14,7 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|土|半|c1=s|c2=p|ls=psc|t1=earth}}.
 
 ===Pronunciation 1===
 {{zh-pron
