--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -126,6 +126,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Afrikaans: {{t+|af|praat}}
 * Albanian: {{t+|sq|flas}}
 * Arabic: {{t|ar|تَحَدَّثَ}}, {{t+|ar|تَكَلَّمَ}}
+*: Algerian Arabic: {{t|arq|حكى‎}}, {{t|arq|هدر}}
 *: Egyptian Arabic: {{t|arz|كلم|tr=kallim}}
 *: Moroccan Arabic: {{t|ary|هدر|tr=hdar}},  {{t|ary|تكلم|tr=tkallem}}, {{t|ary|دوى|tr=dwa}}
 *: North Levantine Arabic: {{t|apc|حكى|tr=ḥaka}}
