--- a/en/圦/圦.12989.wikitext
+++ b/en/圦/圦.12989.wikitext
@@ -6,8 +6,31 @@
 
 # {{lb|mul|kokuji}} [[water]] [[gate]], [[spout]]
 
-====References====
+===Further reading===
 * {{Han ref|kx=0223.091|dkj=04879|dj=0455.110|hdz=10417.101|uh=5726|ud=22310}}
+
+----
+
+==Chinese==
+{{zh-forms}}
+
+===Etymology===
+{{obor|zh|ja|圦}}.
+
+===Pronunciation===
+{{zh-pron
+|m=kuài
+|c=faai3
+|cat=pn
+}}
+
+===Definitions===
+{{head|zh|Han character}}
+
+# {{zh-used2|j}}
+
+===References===
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
 
 ----
 
