--- a/en/圴/圴.12982.wikitext
+++ b/en/圴/圴.12982.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=47120|canj=GPI|ids=⿰土勺}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0224.160|dkj=04895|dj=0459.010|hdz=10420.050|uh=5734|ud=22324|bh=C9CA|bd=51658}}
 
 ----
@@ -12,22 +12,25 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han compound|土|勺|c1=s|c2=p|ls=psc|t1=earth}}.
+
 ===Pronunciation===
 {{zh-pron
 |m=zhuó
 |c=zoek3
 |mc=y
 |oc=y
-|cat=
+|cat=n
 }}
 
 ===Definitions===
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
-# {{rfdef|zh|sort=土03}}
+# [[print]] in [[soil]]
 
 ===References===
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
+* {{R:yue:Hanzi}}
 
 ----
 
@@ -39,4 +42,4 @@
 # {{rfdef|ja|sort=土03}}
 
 ====Readings====
-* {{ja-readings|on=[[しゃく]] (shaku), [[さく]] (saku)|kun=[[あと]] (ato)}}
+* {{ja-readings|on=しゃく,さく|kun=あと}}
