--- a/en/圵/圵.12983.wikitext
+++ b/en/圵/圵.12983.wikitext
@@ -12,13 +12,16 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han compound|土|上|c1=s|c2=p|ls=psc|t1=earth}}.
+
 ===Etymology 1===
 
 ====Pronunciation====
 {{zh-pron
 |m=dàng
 |m-s=
-|c=
+|c=joeng6
 |c-t=
 |g=
 |h=pfs=
@@ -34,9 +37,14 @@
 }}
 
 ====Definitions====
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
-# {{zh-obsolete}} high field
+# {{zh-obsolete}} [[high]] [[field]]
 
 ===Etymology 2===
+
+====Definitions====
 {{zh-see|壤|ss}}
+
+===References===
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
