--- a/en/圸/圸.12986.wikitext
+++ b/en/圸/圸.12986.wikitext
@@ -4,10 +4,31 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=GU,XGU|ids=⿰土山}}
 
-# [[cliff]] (Only used for Japanese proper name.)
-
-====References====
+===Further reading===
 * {{Han ref|kx=0224.181|hdz=10419.061|uh=5738|ud=22328}}
+
+----
+
+==Chinese==
+{{zh-forms}}
+
+===Etymology===
+{{obor|zh|ja|圸}}.
+
+===Pronunciation===
+{{zh-pron
+|m=shān
+|c=saan1
+|cat=pn
+}}
+
+===Definitions===
+{{head|zh|Han character}}
+
+# {{zh-used2|j}}
+
+===References===
+* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
 
 ----
 
