--- a/en/圹/圹.12987.wikitext
+++ b/en/圹/圹.12987.wikitext
@@ -5,11 +5,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=GI,XGI|ids=⿰土广}}
 
-# [[tomb]], [[grave]]
-# [[prairie]]
-# [[open]] [[wilderness]]
-
-====References====
+===Further reading===
 * {{Han ref|kx=0224.181|hdz=10420.070|uh=5739|ud=22329}}
 
 ----
@@ -22,9 +18,9 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[khoáng]]|rs=土03}}
+{{vi-readings|nom=khoáng|rs=土03}}
 
 # {{rfdef|vi|sort=土03}}
 
-====References====
+===References===
 * [http://nomfoundation.org/common/nom_details.php?codepoint=5739 Nom Foundation]
