--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -77,7 +77,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * French: {{t+|fr|rideau|m}}
 * Galician: {{t+|gl|cortina|f}}
 * Georgian: {{t|ka|ფარდა|sc=Geor}}
-* German: {{t+|de|Vorhang|m}}, {{t+|de|Gardine|f}}
+* German: {{t+|de|Vorhang|m}} {{q|curtain in general, particularly opaque}}, {{t+|de|Gardine|f}} {{q|thin, translucid curtain}}
 * Greek: {{t+|el|κουρτίνα|f}}
 *: Ancient: {{t|grc|προκάλυμμα|n}}
 * Gujarati: {{t|gu|ઢાંકપિછોડો}}
