--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -43,6 +43,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 {{trans-top|image}}
 * Arabic: {{t|ar|قُونَة|f}}
 * Armenian: {{t+|hy|պատկեր}}
+* Belarusian: {{t+|be|во́браз|m}}
 * Bulgarian: {{t+|bg|изображе́ние|n}}
 * Catalan: {{t+|ca|icona|f}}
 * Cornish: {{t|kw|ikon|m}}
@@ -58,14 +59,14 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Irish: {{t|ga|íocón|m}}
 * Italian: {{t+|it|icona|f}}
 * Maori: {{t|mi|ata}}, {{t|mi|ata iti}}
-* Norman: {{t|nrf|icône|f}}
 {{trans-mid}}
+* Norman: {{t|nrf|icône|f}}
 * Norwegian:
 *: Bokmål: {{t+|nb|ikon|m|n}}
 *: Nynorsk: {{t|nn|ikon|m|n}}
 * Polish: {{t+|pl|ikona|f}}
 * Portuguese: {{t+|pt|ícone|m}}
-* Russian: {{t+|ru|изображе́ние|n}}
+* Russian: {{t+|ru|изображе́ние|n}}, {{t+|ru|о́браз|m}}
 * Scottish Gaelic: {{t|gd|ìomhaigh|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|икона|f|sc=Cyrl}}
@@ -74,6 +75,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 * Slovene: {{t+|sl|ikona|f}}
 * Spanish: {{t+|es|icono|m}}, {{t+|es|ícono|m}}
 * Swedish: {{t+|sv|ikon|c}}, {{t+|sv|bild|c}}
+* Ukrainian: {{t|uk|зобра́ження|n}}, {{t+|uk|о́браз|m}}
 * Vietnamese: {{t|vi|biểu tượng}}
 * Yup'ik: {{t|esu|ikuunaq}}
 {{trans-bottom}}
