--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -81,15 +81,15 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 {{trans-bottom}}
 
 {{trans-top|religious painting}}
-* Albanian: {{t|sq|ikona|f}}, {{t+|sq|ikonë|f}}
+* Albanian: {{t+|sq|ikonë|f}}
 * Arabic: {{t|ar|أَيْقُونَة|f}}, {{t|ar|إِيقُونَة|f}}
 * Armenian: {{t+|hy|սրբապատկեր}}, {{t+|hy|պատկեր}}
 * Asturian: {{t|ast|iconu|m}}
 * Azerbaijani: {{t|az|ikona}}
 * Bashkir: {{t|ba|тәре|sc=Cyrl}}
 * Basque: {{t|eu|ikono}}
-* Belarusian: {{t|be|іко́на|f|sc=Cyrl}}
-* Bulgarian: {{t+|bg|ико́на|f|sc=Cyrl}}
+* Belarusian: {{t|be|іко́на|f}}
+* Bulgarian: {{t+|bg|ико́на|f}}
 * Catalan: {{t+|ca|icona|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|聖像|sc=Hani}}, {{t+|cmn|圣像|tr=shèngxiàng|sc=Hani}}
