--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -85,6 +85,9 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * {{desc|ga|speilt|bor=1}}
 * {{desc|cy|sbelt|bor=1}}
 
+=====See also=====
+* [[Appendix:Grains]]
+
 ===Etymology 3===
 From {{der|en|gmh|spalden}}, or {{der|en|non|spald}}.
 
