--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -165,6 +165,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * North Frisian: {{qualifier|Mooring}} {{t|frr|fine}}, {{qualifier|Föhr-Amrum}} {{t|frr|finj}}
 * Norwegian: {{t+|no|finne}}
 * Novial: {{t|nov|trova}}
+* Ojibwe: {{q|find things}} {{t|oj|mikige}}, {{q|find people}} {{t|oj|mikaage}}
 * Old Polish: {{t|zlw-opl|nałazici|impf}}
 * Old Turkic: {{t|otk|𐰉𐰆𐰞|tr=bul-}}
 * Ossetian: {{t-needed|os}}
