--- a/en/圿/圿.12994.wikitext
+++ b/en/圿/圿.12994.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=GOLL|ids=⿰土介}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0224.230|dkj=04907|dj=0459.110|hdz=10423.110|uh=573F|ud=22335}}
 
 ----
@@ -12,17 +12,23 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym}}
+{{Han compound|土|介|c1=s|c2=p|ls=psc|t1=earth}}.
+
 ===Pronunciation===
 {{zh-pron
 |m=jiá
 |c=git3
-|cat=
+|mc=y
+|oc=y
+|cat=n
 }}
 
 ===Definitions===
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
-# {{rfdef|zh}}
+# [[dirt]], [[filth]]
 
 ===References===
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
