--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -5,13 +5,13 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=40117|canj=GYHN|ids=⿰土亢}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0226.010|dkj=04932|dj=0460.080|hdz=10426.090|uh=5751|ud=22353|bh=A77C|bd=42876}}
 
 ----
 
 ==Chinese==
-{{zh-forms|alt=阬*}}
+{{zh-forms|alt=阬*,坈-ancient}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -40,7 +40,7 @@
 }}
 
 ===Definitions===
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # [[pit]], [[hole]]
 # [[tunnel]]
@@ -117,6 +117,6 @@ From {{der|ko|ltc|-}} {{ltc-l|坑}}.
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[khanh]], [[ganh]]|rs=土04}}
+{{vi-readings|hanviet=khanh|nom=khanh,ganh|rs=土04}}
 
 # {{rfdef|vi|sort=土04}}
