--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,8 +1,10 @@
 {{also|israel|Ísrael|Israèl|İsrael|Israël}}
 ==English==
+[[File:Flag of Israel.svg|thumb|Flag of the State of Israel]]
+[[File:Israel (orthographic projection) with disputed territories.svg|thumb|Location map of the State of Israel, with disputed territories shown in light green]]
+
 ===Alternative forms===
-Israel doest not exist, israel is shit, free palestine. Palestine lives matter
-*
+* {{l|en|Isr.}} {{qualifier|abbreviation}}
 
 ===Etymology===
 From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Israel}}, from {{der|en|grc|Ἰσραήλ}}, from {{der|en|he|יִשְׂרָאֵל||Israel|tr=yisra'él}}<ref>{{R:Dictionary.com}}</ref><ref>{{R:MWO}}</ref>,{{der|en|phn|𐤉𐤔𐤓𐤀𐤋}}. In the Bible, it is said to be from the name {{m|he|[[שרה|יִשְׂרֶה]] [[אֵל]]|tr=yisré 'él}} given to [[Jacob]] in {{RQ:Tanach|1|32|29}}, after which his descendants came to be known as [[Israelite]]s and their land as the "kingdom/land of Israel". The personal name, already attested in [[Eblaite]] {{l|xeb|𒅖𒊏𒅋}} (''iš-ra-il'') and [[Ugaritic]] {{l|uga|𐎊𐎌𐎗𐎛𐎍}}<!-- as a personal name-->,<ref>Michael G. Hasel, ''Domination and Resistance: Egyptian Military Activity in the Southern Levant'' (Brill, 1998)</ref> has been variously translated as "he wrestles with God", "he prevails with God",<ref>James P. Boyd, ''Bible dictionary'' (Ottenheimer Publishers, 1958)</ref> or "God rules" (possibly from the same root {{m|he|ש־ר־ה}}/{{m|he|ש־ר־ר}} as {{m|he|שָׂרָה||Sarah}}).<ref>Victor P. Hamilton, ''The Book of Genesis: Chapters 18–50'' (NICOT, Grand Rapids: Eerdmans, 1995)</ref>
@@ -58,6 +60,150 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * {{l|en|Israelitish}}
 
 ====Translations====
+{{trans-top|id=Q801|the state}}
+* Adyghe: {{t|ady|Исраил}}
+* Albanian: {{t|sq|Izrael|m}}
+* Amharic: {{t|am|እስራኤል|sc=Ethi}}
+* Arabic: {{t+|ar|إِسْرَائِيل|f}}
+* Aramaic:
+*: Assyrian Neo-Aramaic: {{t|aii|ܐܝܣܪܐܝܠ|sc=Syrc}}
+* Armenian: {{t+|hy|Իսրայել}}
+* Assamese: {{t|as|ইজৰাইল}}
+* Assyrian Neo-Aramaic: {{t|aii|ܐܝܣܪܐܝܠ|sc=Syrc}}
+* Asturian: {{t+|ast|Israel}}
+* Azerbaijani: {{t+|az|İsrail}}
+* Bashkir: {{t|ba|Израиль}}
+* Belarusian: {{t|be|Ізра́іль|m}}
+* Bengali: {{t+|bn|ইসরায়েল}}
+* Breton: {{t|br|Israel}}
+* Bulgarian: {{t+|bg|Израе́л|m}}
+* Burmese: {{t|my|အစ္စရေး}}
+* Car Nicobarese: {{t|caq|Israĕl}}
+* Catalan: {{t+|ca|Israel|m}}
+* Central Atlas Tamazight: {{t|tzm|ⵉⵙⵔⴰⵢⵉⵍ}}
+* Chechen: {{t|ce|Израиль}}
+* Chinese:
+*: Cantonese: {{t|yue|以色列|tr=ji5 sik1 lit6|sc=Hani}}
+*: Hakka: {{t|hak|以色列|tr=Yî-set-lie̍t|sc=Hani}}
+*: Mandarin: {{t+|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
+*: Min Dong: {{t|cdo|以色列|tr=Ī-sáik-liĕk|sc=Hani}}
+*: Min Nan: {{t|nan|以色列|tr=Í-sek-lia̍t|sc=Hani}}
+*: Wu: {{t|wuu|以色列|tr=i seq liq}}
+* Chuvash: {{t|cv|Израиль|sc=Cyrl}}
+* Czech: {{t+|cs|Izrael}}
+* Danish: {{t+|da|Israel}}
+* Dhivehi: {{t|dv|އިސްރާއީލު|sc=Thaa}}
+* Dutch: {{t+|nl|Israël|n}}
+* Dzongkha: {{t|dz|ཨིཛ་རཱེལ་|sc=Tibt}}
+* Esperanto: {{t+|eo|Israelo}}
+* Estonian: {{t+|et|Iisrael}}
+* Faroese: {{t|fo|Ísrael|n}}
+* Finnish: {{t+|fi|Israel}}
+* French: {{t+|fr|Israël|m}}
+* Galician: {{t+|gl|Israel|m}}
+* Georgian: {{t+|ka|ისრაელი}}
+* German: {{t+|de|Israel|n}}
+* Greek: {{t+|el|Ισραήλ|n}}
+*: Ancient: {{t|grc|Ἰσραήλ|m}}
+* Gujarati: {{t|gu|ઈઝરાયલ}}
+* Hausa: {{t|ha|Isra'ila}}
+* Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yisra'el}}, {{t+|he|מְדִינַת יִשְׂרָאֵל|f|tr=medinát yisra'él}}
+* Hindi: {{t+|hi|इस्राइल|m}}, {{t+|hi|इसराईल|m}}, {{t+|hi|इसराइल|m}}, {{t+|hi|इज़राइल|m}}
+* Hungarian: {{t+|hu|Izrael}}
+* Icelandic: {{t+|is|Ísrael}}
+* Ido: {{t+|io|Izrael}}
+* Indonesian: {{t+|id|Israel}}
+* Interlingua: {{t|ia|Israel}}
+* Irish: {{t+|ga|Iosrael|m}}, {{t|ga|Stát Iosrael|m}}
+* Italian: {{t+|it|Israele}}
+* Japanese: {{t+|ja|イスラエル|tr=Isuraeru}}
+* Judeo-Arabic: {{t|jrb|אסראיל|tr=ʾisrāʾīl}}
+* Kalenjin: {{t|kln|Israel}}
+* Kamba: {{t|kam|Israel}}
+* Kannada: {{t+|kn|ಇಸ್ರೇಲ್}}
+* Kazakh: {{t|kk|Израиль|sc=Cyrl}}
+* Khmer: {{t+|km|អ៊ីស្រាអែល}}
+* Kikuyu: {{t|ki|Israel}}
+* Korean: {{t+|ko|^이스라엘}}
+* Krymchak: {{t|jct|Исраэль}}
+* Kurdish:
+*: Central Kurdish: {{t|ckb|ئیسرئێل}}
+*: Northern Kurdish: {{t|kmr|Îsraêl}}
+* Kyrgyz: {{t+|ky|Израиль|sc=Cyrl}}
+* Lao: {{t|lo|ອິດສະລະແອນ}}
+{{trans-mid}}
+* Latin: {{t|la|Israel}}
+* Latvian: {{t+|lv|Izraēla|f}}
+* Lithuanian: {{t+|lt|Izraelis|m}}
+* Livonian: {{t|liv|Izraēl}}, {{t|liv|Jūdõmō}}
+* Luo: {{t|luo|Israel}}
+* Macedonian: {{t+|mk|Израел|m}}
+* Malay: {{t|ms|Israel}}
+* Malayalam: {{t|ml|ഇസ്രയേൽ}}
+* Maltese: {{t|mt|Iżrael}}
+* Manchu: {{t|mnc|ᡳᠰᠠᡵᠠᡳᠯ}}
+* Mansoanka: {{t|msw|Israeli}}
+* Marathi: {{t|mr|इस्रायल}}, {{t|mr|इस्रायल}}
+* Meru: {{t|mer|Israel}}
+* Mongolian: {{t|mn|Израиль}}, {{t+|mn|Израйль}}
+* Navajo: {{t|nv|Ízrel bikéyah}}
+* Neapolitan: {{t|nap|Isdraele}}
+* Nepali: {{t|ne|इजरायल}}
+* Nogai: {{t|nog|Исраил}}
+* Norman: {{t|nrf|Israël|m}}
+* Northern Thai: {{t|nod|ᩍᩈᩕᩣᩑᩃ}}
+* Norwegian:
+*: Bokmål: {{t+|nb|Israel}}
+*: Nynorsk: {{t+|nn|Israel}}
+* Old Church Slavonic:
+*: Cyrillic: {{t|cu|Їздраил҄ь|m|sc=Cyrs}}
+* Oriya: {{t|or|ଇସ୍ରାଏଲ}}
+* Ossetian: {{t|os|Израиль|sc=Cyrl}}
+* Paiwan: {{t|pwn|Israil}}
+* Pashto: {{t+|ps|اسراييل|m|tr=esrāíl}}
+* Persian: {{t+|fa|اسرائیل|tr=esrâ’il}}
+* Plautdietsch: {{t|pdt|Israel|n}}
+* Polish: {{t+|pl|Izrael|m-in}}
+* Portuguese: {{t+|pt|Israel}}
+* Punjabi: {{t+|pa|ਇਜ਼ਰਾਇਲ}}
+* Romanian: {{t+|ro|Israel|n}}
+* Russian: {{t+|ru|Изра́иль|m}}
+* Samogitian: {{t|sgs|Izraelės|m}}, {{t|sgs|Izraele Valstībė|f}}
+* Sanskrit: {{t|sa|इस्रेल}}, {{t|sa|इस्रेल}}
+* Santali: {{t|sat|ᱤᱡᱽᱨᱟᱭᱮᱞ}}
+* Scottish Gaelic: {{t|gd|Iosrael|f}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|Ѝзраел|m}}
+*: Roman: {{t+|sh|Ìzrael|m}}
+* Sindhi: {{t|sd|اسرائيل}}
+* Sinhalese: {{t|si|ඊශ්‍රායෙලය}}
+* Slovak: {{t+|sk|Izrael|m}}
+* Slovene: {{t+|sl|Ȋzrael|m}}
+* Somali: {{t|so|Israaiil}}
+* Spanish: {{t+|es|Israel|m}}
+* Swahili: {{t+|sw|Israeli}}
+* Swedish: {{t+|sv|Israel}}
+* Tagalog: {{t|tl|Israel}}
+* Tajik: {{t+|tg|Исроил}}
+* Tamil: {{t|ta|இஸ்ரேல்}}
+* Tatar: {{t|tt|Исраил}}
+* Telugu: {{t|te|ఇజ్రాయిల్}}
+* Thai: {{t+|th|อิสราเอล}}
+* Tibetan: {{t|bo|ཨི་སི་ར་ཨེལ།}}
+* Tigrinya: {{t|ti|እስራኤል}}
+* Turkish: {{t+|tr|İsrail}}
+* Turkmen: {{t|tk|Izrail}}, {{t|tk|Ysraýyl}}
+* Ukrainian: {{t+|uk|Ізра́їль|m}}
+* Urdu: {{t|ur|اسرائیل|m|tr=isrā'il}}
+* Uyghur: {{t|ug|ئىسرائىلىيە}}
+* Uzbek: {{t+|uz|Isroil}}
+* Veps: {{t|vep|Izrail'}}
+* Vietnamese: {{t|vi|I-xra-en}}
+* Volapük: {{t|vo|Yisraelän}}
+* Yiddish: {{t|yi|ישׂראל|n|tr=yisroel}}, {{t|yi|מדינת־ישׂראל|f|tr=medines-yisroel}}
+* Yoruba: {{t|yo|Iserẹli}}
+{{trans-bottom}}
+
 {{trans-top|the region}}
 * Hebrew: {{t+|he|אֶרֶץ יִשְׂרָאֵל|f}}
 {{trans-mid}}
@@ -98,6 +244,22 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * Spanish: {{t+|es|Israel|m}}
 * Thai: {{t+|th|อิสราเอล}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
+{{trans-bottom}}
+
+{{trans-top|given name}}
+* Arabic: {{t+|ar|إِسْرَائِيلُ|m|tr=ʾisrāʾīl}}
+* Catalan: {{t+|ca|Israel|m}}
+* Finnish: {{t+|fi|Israel}}
+* French: {{t+|fr|Israël|m}}
+* Hebrew: {{t+|he|יִשְׂרָאֵל|m|tr=yisra'él}}
+* Italian: {{t+|it|Israele|m}}
+* Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
+{{trans-mid}}
+* Polish: {{t+|pl|Izrael|m}}
+* Portuguese: {{t+|pt|Israel|m}}
+* Russian: {{t+|ru|Изра́иль|m}}, {{t+|ru|Израи́л|m}}, {{t+|ru|Исраэ́ль|m}}
+* Thai: {{t+|th|อิสราเอล}}
+* Yiddish: {{t|yi|ישׂראל|m|tr=yisroel}}
 {{trans-bottom}}
 
 ====See also====
