--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -81,7 +81,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 
 {{trans-top|religious painting}}
 * Albanian: {{t+|sq|ikonë|f}}
-* Arabic: {{t|ar|أَيْقُونَة|f}}, {{t|ar|إِيقُونَة|f}}
+* Arabic: {{t|ar|أَيْقُونَة|f}}
 * Armenian: {{t+|hy|սրբապատկեր}}, {{t+|hy|պատկեր}}
 * Asturian: {{t|ast|iconu|m}}
 * Azerbaijani: {{t|az|ikona}}
