--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -41,6 +41,7 @@ From {{bor|en|la|īcōn}}, from {{der|en|grc|εἰκών||likeness, image, portr
 
 ====Translations====
 {{trans-top|image}}
+* Arabic: {{t|ar|أَيْقُونَة|f}}
 * Armenian: {{t+|hy|պատկեր}}
 * Belarusian: {{t+|be|во́браз|m}}
 * Bulgarian: {{t+|bg|изображе́ние|n}}
