--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -129,8 +129,9 @@ Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà|
 * Macedonian: {{t|mk|гранка|n}}
 * Malay: {{t|ms|dahan}}
 * Maltese: {{t|mt|fergħa|f}}
-{{trans-mid}}
 * Manchu: {{t|mnc|ᡤᠠᡵᡤᠠᠨ}}
+{{trans-mid}}
+* Middle English: {{t|enm|braunche}}
 * Miyako: {{t|mvi|枝|tr=ゆだ, yuda}}
 * Mongolian: {{t+|mn|мөчир|sc=Cyrl}}
 * Nahuatl: {{t|nah|cuauhmaitl}}
@@ -219,8 +220,9 @@ Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà|
 * Kurdish:
 *: Northern Kurdish: {{t+|kmr|liq}}, {{t+|kmr|çeq}}
 * Maori: {{t|mi|pekanga}}
-* Polish: {{t+|pl|rozgałęzienie|n}}
+* Middle English: {{t|enm|braunche}}
 {{trans-mid}}
+* Polish: {{t+|pl|rozgałęzienie|n}}
 * Portuguese: {{t+|pt|ramo|m}}, {{t+|pt|broto|m}}
 * Romanian: {{t+|ro|ramificare}}
 * Russian: {{t+|ru|ответвле́ние|n}}, {{t+|ru|ве́тка|f}}
@@ -303,6 +305,7 @@ Indo-European cognates include {{cog|non|vró||angle, corner}}, {{cog|lt|rankà|
 * Ido: {{t+|io|brancho}}, {{t+|io|ramo}}
 {{trans-mid}}
 * Maori: {{t|mi|oka}}, {{t|mi|toronga}}
+* Middle English: {{t|enm|braunche}}
 * Slovak: {{t|sk|vetva}}
 * Swahili: {{t+|sw|mlango|c2|c3}}
 {{trans-bottom}}
