--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -16,6 +16,7 @@
 * {{hyphenation|en|but|ter}}
 
 ===Etymology 1===
+{{root|en|ine-pro|*gʷṓws-}}
 From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{inh|en|gmw-pro|*buterā}}, from {{der|en|la|būtȳrum}}, from {{der|en|grc|βούτῡρον||cow cheese}}, compound of {{m|grc|βοῦς||ox, cow}} and {{m|grc|τῡρός||cheese}}.
 
 ====Noun====
