--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -18,8 +18,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 # The skin of a human or animal.
 # {{lb|en|by extension}} [[bare|Bare]] [[arms]], [[bare]] [[legs]], bare torso.
 # [[animal|Animal]] tissue regarded as [[food]]; [[meat]] (but sometimes excluding [[fish]]).
-#* {{RQ:Mlry MrtDrthr|17.2|2|XV|ij}}:
-#*: Thenne syr launcelot sayd / fader what shalle I do / Now sayd the good man / I requyre yow take this hayre that was this holy mans and putte it nexte thy skynne / and it shalle preuaylle the gretely / syr and I wille doo hit sayd sir launcelot / Also I charge you that ye ete no '''flesshe''' as longe as ye be in the quest of the sancgreal / nor ye shalle drynke noo wyne / and that ye here masse dayly and ye may doo hit
+#* {{RQ:Mlry MrtDrthr|17.2|2|XV|ij|passage=Thenne syr launcelot sayd / fader what shalle I do / Now sayd the good man / I requyre yow take this hayre that was this holy mans and putte it nexte thy skynne / and it shalle preuaylle the gretely / syr and I wille doo hit sayd sir launcelot / Also I charge you that ye ete no '''flesshe''' as longe as ye be in the quest of the sancgreal / nor ye shalle drynke noo wyne / and that ye here masse dayly and ye may doo hit}}
 <!--Prior quotr#*:I charge the that thou ete no '''fleysshe''' as longe as ye be in the Queste of Sankgreall, nother ye shall drynke no wyne-->
 #* '''c.1530s''', [[s:William Tyndale|William Tyndale]], ''[[s:Bible (Tyndale)|Tyndale Bible]]'', ''[[s:Bible (Tyndale)/Leviticus|Leviticus]]'', 7, xix-xxi,
 #*: The '''flesh''' that twycheth any vnclene thinge shall not be eaten. but burnt with fire:and all that be clene in their flesh, maye eate '''flesh'''.
