--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -86,7 +86,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Amharic: {{t|am|ጨጓራ|m|sc=Ethi}}
 * Apache:
 *: Western Apache: {{t|apw|bibid}}
-* Arabic: {{t+|ar|مَعِدَة|f}}, {{t+|ar|مِعْدَة|f}}
+* Arabic: {{t+|ar|مَعِدَة|f}}, {{t+|ar|مِعْدَة|f}}, {{t|ar|بَطْن|m}}
 *: Egyptian Arabic: {{t|arz|معدة|f|tr=meʿda|sc=Arab}}
 * Aragonese: {{t|an|estomago|m|}}
 * Aramaic:
@@ -183,8 +183,8 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Luganda: {{t-needed|lg}}
 * Luo: {{t|luo|ich}}
 * Luxembourgish: {{t|lb|Mo|m}}
-* Macedonian: {{t|mk|желудник|m}}, {{t|mk|стомак|m}}, {{t|mk|мев|m}}
 {{trans-mid}}
+* Macedonian: {{t|mk|желудник|m}}, {{t|mk|стомак|m}}, {{t|mk|мев|m}}
 * Malay: {{t+|ms|perut}}
 * Malayalam: {{t+|ml|ആമാശയം}}
 * Maltese: {{t|mt|stonku|m}}
