--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -7,12 +7,12 @@
 ** {{audio|en|en-uk-caught.ogg|Audio (UK)}}
 ** {{a|Australia|New Zealand}} {{IPA|en|[k̠ʰoːt]}}
 ** {{audio|en|en-au-caught.ogg|Audio (Australia)}}
-** {{a|US}} {{IPA|en|[kʰɔt]}}
-** {{audio|en|en-us-contrastive-caught.ogg|Audio (distinctive cot-caught)}}
+** {{a|US}} {{IPA|en|[kʰɔt]|[kʰɔə̯t]|[kʰoə̯t]}}
+*** {{audio|en|en-us-contrastive-caught.ogg|Audio (distinctive cot-caught)}}
 ** {{a|US}} {{IPA|en|[kʰɑt]}}
-** {{audio|en|en-us-caught.ogg|Audio (US cot-caught merged)}}
+*** {{audio|en|en-us-caught.ogg|Audio (US cot-caught merged)}}
 ** {{a|US}} {{IPA|en|[kʰɒt]}}
-** {{audio|en|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
+*** {{audio|en|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
 * {{homophones|en|cot|q1=accents with cot-caught merger|court|q2=non-rhotic accents with the [[horse-hoarse merger]]}}
 * {{rhymes|en|ɔːt}}
 
