--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -22,6 +22,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 ====Synonyms====
 * {{l|en|Aotearoa}}
 * {{l|en|Aotearoa New Zealand}}
+* {{l|en|Manawa}}
 * {{l|en|Enzed}}
 * {{l|en|Godzone}} {{q|New Zealand|informal}}
 * {{l|en|Kiwiland}}
@@ -38,6 +39,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued 
 {{top2}}
 * {{l|en|Enzedder}}
 * {{l|en|New Zealander}}
+* {{l|en|Manawanian}}
 * {{l|en|New Zealand English}}
 * {{l|en|New Zealand flax}}
 * {{l|en|Zealandian}}
