--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -243,7 +243,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Spanish: {{t+|es|estómago|m}}
 * Sundanese: {{t|su|ᮘᮥᮛᮤᮂ}}
 * Swahili: {{t+|sw|utumbo|c5|c6}}
-* Swedish: {{t+|sv|mage|c}}
+* Swedish: {{t+|sv|mage|c}}, {{t+|sv|magsäck|c}}
 * Tagal Murut: {{t|mvv|tinaai}}
 * Tagalog: {{t+|tl|tiyan}}, {{t|tl|sikmura}}
 * Tajik: {{t+|tg|меъда}}
