--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -36,6 +36,7 @@ Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, c
 # [[term]] in office
 
 ====Derived terms====
+* {{l|fr|cumul des mandats}}
 * {{l|fr|mandat d'arrêt}}
 
 ====Descendants====
