--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -44,6 +44,9 @@
 # to [[cause]] (problem); to [[court]]
 # to [[offend]]; to [[provoke]]; to [[irritate]]; to [[vex]]
 # to [[attract]]; to [[cause]] (reaction)
+# {{lb|zh|Cantonese}} to [[attract]] (an animal)
+#: {{zh-syn|招}}
+#: {{zh-x|惹 烏蠅|to '''attract''' flies|C}}
 # {{lb|zh|Cantonese}} to [[infect]]
 
 ====Compounds====
