--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -249,6 +249,13 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 #* '''1967''', John Child, ''Industrial Relations in the British Printing Industry'' (page 113)
 #*: The pressmen were granted a '''stab''' wage of 36s for a 60 hour week, and the extras for overtime and Sunday work {{...}}
 
+====Noun====
+{{en-noun|!}}
+
+# {{lb|en|industrial relations}} {{clipping of|en|establishment}}
+#* '''1892''', ''The British Printer'' (volume 5, page 42)
+#*: {{...}} there were 286 overseers and 210 readers occupied in the 501 offices; 2,691 compositors were paid on the '''stab''' {{...}}
+
 ===Anagrams===
 * {{anagrams|en|a=abst|ABTs|ATBs|ATSB|Bast|Bats|SATB|TBAs|TBSA|Tabs|bast|bats|tabs}}
 
