--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -366,7 +366,7 @@ See combined section below.
 {{trans-mid}}
 * Latgalian: {{t|ltg|giut}}, {{t|ltg|giusteit}}, {{t|ltg|čupt}}, {{t|ltg|tvert}}
 * Latvian: {{t|lv|ķert}}, {{t|lv|tvert}}
-* Lombard: {{t|lmo|ciapà}}
+* Lombard: {{t|lmo|ciappà}}, {{t|lmo|ciapà}}
 * Maore Comorian: {{t|swb|para|alt=upara}}
 * Maori: {{t|mi|hāhā}} {{qualifier|referring to the breath}}
 * Marathi: {{t|mr|पकडणे}}
