--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -52,11 +52,11 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Bashkir: {{t|ba|тороу}}
 * Basque: {{t|eu|kostatu}}
 * Belarusian: {{t|be|каштава́ць|impf|sc=Cyrl}}
-* Bulgarian: {{t+|bg|стру́вам|impf}}, {{t|bg|ко́ствам|impf}}, {{t+|bg|чиня|impf}}
+* Bulgarian: {{t+|bg|стру́вам|impf}}, {{t|bg|ко́ствам|impf}}, {{t+|bg|чи́ня|impf}}
 * Catalan: {{t+|ca|costar}}
 * Chechen: {{t-needed|ce}}
 * Chinese:
-*: Mandarin: {{t+|cmn|花費|sc=Hani}}, {{t+|cmn|花费|tr=huāfèi|sc=Hani}}
+*: Mandarin: {{t+|cmn|花費}}, {{t+|cmn|花费|tr=huāfèi}}
 * Czech: {{t+|cs|stát}}
 * Danish: {{t|da|koste}}
 * Dutch: {{t+|nl|kosten}}
@@ -121,14 +121,14 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Somali: {{t-needed|so}}
 * Spanish: {{t+|es|costar}}
 * Swahili: {{t+|sw|gharimu}}
-* Swedish: {{t+|sv|kosta|c}}
+* Swedish: {{t+|sv|kosta}}
 * Tajik: {{t+|tg|арзидан}}
 * Tamil: {{t-needed|ta}}
 * Thai: {{t+|th|ราคา}} {{q|a noun, may be used to express the English verb "to cost" in certain uses}}
 * Tibetan: {{t|bo|གནད}}
 * Turkish: {{t|tr|fiyatı olmak}}
 * Tuvan: {{t-needed|tyv}}
-* Ukrainian: {{t|uk|ко́штувати|impf|sc=Cyrl}}, {{t|uk|сто́їти|impf}}
+* Ukrainian: {{t|uk|ко́штувати|impf}}, {{t|uk|сто́їти|impf}}
 * Uzbek: {{t+|uz|arzimoq}}, {{t+|uz|turmoq}}
 * Venetian: {{t|vec|costar}}, {{t|vec|gostar}}
 * Westrobothnian: {{t|gmq-bot|maks}}
@@ -140,8 +140,6 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 {{trans-bottom}}
 
 {{trans-top|to cause something to be lost}}
-* Chinese:
-*: Mandarin: {{t-check|cmn|付出了；耗费了；花费了|sc=Hani}}
 {{trans-mid}}
 * French: {{t+|fr|coûter}}, {{t+|fr|couter}}
 {{trans-bottom}}
