--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -93,6 +93,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Latvian: {{t+|lv|maksāt}}
 {{trans-mid}}
 * Lithuanian: {{t|lt|kainuoti}}
+* Lombard: {{t|lmo|costà}}
 * Luxembourgish: {{t|lb|kaschten}}
 * Macedonian: {{t|mk|чини|impf}}, {{t|mk|кошта|impf}} {{qualifier|colloquial}}
 * Malay: {{t|ms|harga}}
