--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -65,9 +65,9 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Burmese: {{t+|my|တင်းထိမ်|sc=Mymr}}, {{t+|my|ကန့်လန့်ကာ|sc=Mymr}}
 * Catalan: {{t+|ca|cortina|f}}
 * Chinese:
-*: Cantonese: {{t|yue|窗簾|sc=Hani}}, {{t|yue|窗帘|tr=coeng1 lim4-2|sc=Hani}}
-*: Mandarin: {{t+|cmn|窗簾|sc=Hani}}, {{t+|cmn|窗帘|tr=chuānglián|sc=Hani}}, {{t+|cmn|簾子|sc=Hani}}, {{t+|cmn|帘子|tr=liánzi|sc=Hani}}
-*: Min Nan: {{t+|nan|窗仔|tr=thang-á|sc=Hani}}, {{t|nan|窗簾仔|sc=Hani}}, {{t|nan|窗帘仔|tr=thang-lî-á|sc=Hani}}, {{t|nan|窗仔簾|sc=Hani}}, {{t|nan|窗仔帘|tr=thang-á-nî|sc=Hani}}, {{t|nan|kha-tián|sc=Latn}}
+*: Cantonese: {{t|zh|窗簾|sc=Hani}}, {{t|zh|窗帘|tr=coeng1 lim4-2|sc=Hani}}
+*: Mandarin: {{t+|zh|窗簾|sc=Hani}}, {{t+|zh|窗帘|tr=chuānglián|sc=Hani}}, {{t+|zh|簾子|sc=Hani}}, {{t+|zh|帘子|tr=liánzi|sc=Hani}}
+*: Min Nan: {{t+|zh|窗仔|tr=thang-á|sc=Hani}}, {{t|zh|窗簾仔|sc=Hani}}, {{t|zh|窗帘仔|tr=thang-lî-á|sc=Hani}}, {{t|zh|窗仔簾|sc=Hani}}, {{t|zh|窗仔帘|tr=thang-á-nî|sc=Hani}}, {{t|nan|kha-tián|sc=Latn}}
 * Chuvash: {{t|cv|чаршав}}
 * Czech: {{t+|cs|závěs|m}}, {{t+|cs|záclona|f}}
 * Danish: {{t+|da|gardin|n}}
@@ -168,7 +168,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Bulgarian: {{t+|bg|заве́са|f}}
 * Catalan: {{t|ca|teló|m}}
 * Chinese:
-*: Mandarin: {{t+|cmn|幕布|tr=mùbù|sc=Hani}}
+*: Mandarin: {{t+|zh|幕布|tr=mùbù|sc=Hani}}
 * Czech: {{t+|cs|opona|f}}
 * Danish: {{t+|da|tæppe|n}}
 * Dutch: {{t+|nl|doek|n}}
@@ -228,14 +228,10 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 #* '''1985''', {{w|Carol Shields}}, "Dolls, Dolls, Dolls, Dolls" in ''The Collected Stories'', Random House Canada, 2004, p. 163,
 #*: The window, softly '''curtained''' with dotted swiss, became the focus of my desperate hour-by-hour attention.
 # {{lb|en|figuratively}} To [[hide]], [[cover]] or [[separate]] as if by a curtain.
-#* c. '''1593''', {{w|William Shakespeare}}, ''{{w|Titus Andronicus}}'', Act II, Scene 2, [http://www.opensourceshakespeare.org/views/plays/play_view.php?WorkID=titus&Scope=entire&pleasewait=1&msg=pl]
-#*: And, after conflict such as was supposed / The wandering prince and Dido once enjoy'd, / When with a happy storm they were surprised / And '''curtain'd''' with a counsel-keeping cave, / We may, each wreathed in the other's arms, / Our pastimes done, possess a golden slumber;
-#* '''1840''', {{w|Percy Bysshe Shelley}}, "{{w|A Defence of Poetry}}" [http://www.gutenberg.org/files/5428/5428-h/5428-h.htm]
-#*: But poetry in a more restricted sense expresses those arrangements of language, and especially metrical language, which are created by that imperial faculty; whose throne is '''curtained''' within the invisible nature of man.
-#* '''1958''', {{w|Ovid}}, ''The {{w|Metamorphoses}}'', translated by {{w|Horace Gregory}}, New York: Viking, Book IV, Perseus, p. 115,
-#*: He saw a rock that pierced the shifting waters / As they stilled, now '''curtained''' by the riding / Of the waves, and leaped to safety on it.
-#* '''2003''', {{w|A. B. Yehoshua}}, ''The Liberated Bride'' (2001), translated by {{w|Hillel Halkin}}, Harcourt, Part 2, Chapter 17, p. 115,
-#*: But bleakness still '''curtained''' the gray horizon.
+#* {{quote-book|en|year=1593|author={{w|William Shakespeare}}|title={{w|Titus Andronicus}}|section=Act II, Scene 2|url=http://www.opensourceshakespeare.org/views/plays/play_view.php?WorkID=titus&Scope=entire&pleasewait=1&msg=pl|text=And, after conflict such as was supposed / The wandering prince and Dido once enjoy'd, / When with a happy storm they were surprised / And '''curtain'd''' with a counsel-keeping cave, / We may, each wreathed in the other's arms, / Our pastimes done, possess a golden slumber;}}
+#* {{quote-book|en|year=1840|author={{w|Percy Bysshe Shelley}}|title={{w|A Defence of Poetry}}|url=http://www.gutenberg.org/files/5428/5428-h/5428-h.htm|text=But poetry in a more restricted sense expresses those arrangements of language, and especially metrical language, which are created by that imperial faculty; whose throne is '''curtained''' within the invisible nature of man.}}
+#* {{quote-book|en|year=1958|author={{w|Ovid}}|title=The {{w|Metamorphoses}}|trans-author={{w|Horace Gregory}}|location=New York|publisher=Viking|section=Book IV, Perseus|p=115|text=He saw a rock that pierced the shifting waters / As they stilled, now '''curtained''' by the riding / Of the waves, and leaped to safety on it.}}
+#* {{quote-book|en|year=2003|author={{w|A. B. Yehoshua}}|title=The Liberated Bride|origyear=2001|trans-author={{w|Hillel Halkin}}|publisher=Harcourt|section=Part 2, Chapter 17|p=115|text=But bleakness still '''curtained''' the gray horizon.}}
 
 ====Synonyms====
 * {{l|en|becurtain}}
@@ -259,5 +255,4 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 ===Anagrams===
 * {{anagrams|en|a=acinrtu|turacin}}
 
-[[Category:en:Furniture]]
-[[Category:en:Theater]]
+{{c|en|Furniture|Theater|Fabrics}}
